# REST-api

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  dockerfile  main.py  prometheus.yml  pyproject.toml
app/api/: app.py
app/api/routes/: posts.py  users.py
app/auth/: auth_db.py  key.py  main.py
app/auth/auth_model/: Ulogin.py  __init__.py
app/auth/schema/: auth_U.py
app/auth/utils/: utils.py
app/core/: logger.py  secret_keys.py
app/db/: __init__.py  db.py
app/db/models/: medias.py  posts.py  users.py
app/db/models/enum/: enum.py
app/middleware/: middleware.py
app/schemas/: posts.py  users.py
app/services/: posts.py  users.py
app/storage/: storage_service.py
hls/8a31f7cb-68b7-48b6-91d6-28bd3f53655b/: playlist.m3u8  segment_000.ts  segment_001.ts  segment_002.ts  segment_003.ts  segment_004.ts
nginx/: nginx.conf
src/app/api/: app.py
src/app/api/routes/: users.py
src/app/db/: db.py
src/app/schemas/: users.py
tests/api/v1/routes/: test_health.py
